Add clean Heroku deployment files (no secrets)

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,8 @@ docs/build/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Sensitive files - NEVER commit these
+*.json
+set_heroku_env_vars.sh
+HEROKU_SETUP_STEP_BY_STEP.md
