--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# WeTechForU AI Marketing Platform Dependencies
+# WeTechForU AI Marketing Platform - Heroku Dependencies
 
 # Core Flask
 Flask==2.3.3
@@ -47,12 +47,9 @@ python-dateutil==2.8.2
 pytz==2023.3
 click==8.1.7
 
-# Development
-pytest==7.4.2
-pytest-flask==1.2.0
-black==23.7.0
-flake8==6.0.0
-
-# Production
+# Production Server
 gunicorn==21.2.0
 whitenoise==6.5.0
+
+# Heroku specific
+dj-database-url==2.1.0
