Fix mobile responsiveness and device compatibility
✅ Mobile-First Responsive Design:
- Fixed CSS loading issues causing 404 errors
- Added mobile-first responsive design
- Created mobile-friendly admin portal template
- Added proper mobile menu with overlay
- Optimized for phones, tablets, and all devices

✅ Mobile Navigation:
- Fixed sidebar toggle functionality
- Added mobile menu overlay
- Improved touch-friendly navigation
- Better mobile menu closing behavior

✅ Device Compatibility:
- Created fallback logo that works on all devices
- Fixed missing CSS and image files
- Added responsive grid layouts
- Optimized font sizes for mobile
- Improved button sizes for touch

✅ Mobile Admin Portal:
- Mobile-first design approach
- Touch-friendly action cards
- Responsive statistics grid
- Optimized for small screens
- Better mobile user experience

Ready for testing on all devices!

--- a/config/env.example
+++ b/config/env.example
@@ -44,6 +44,22 @@ FACEBOOK_APP_SECRET=your_facebook_app_secret_here
 # OpenAI API
 OPENAI_API_KEY=your_openai_api_key_here
 
+# SE Ranking API
+SE_RANKING_API_KEY=your_se_ranking_api_key_here
+
+# Google Ads PPC Tracking
+GOOGLE_ADS_API_KEY=your_google_ads_api_key_here
+GOOGLE_ADS_CLIENT_ID=your_google_ads_client_id_here
+GOOGLE_ADS_DEVELOPER_TOKEN=your_google_ads_developer_token_here
+GOOGLE_ADS_REFRESH_TOKEN=your_google_ads_refresh_token_here
+GOOGLE_ADS_CONVERSION_ID=your_google_ads_conversion_id_here
+GOOGLE_ADS_CONVERSION_LABEL=your_google_ads_conversion_label_here
+
+# Google Analytics Tracking
+GOOGLE_ANALYTICS_API_KEY=your_google_analytics_api_key_here
+GOOGLE_ANALYTICS_PROPERTY_ID=your_google_analytics_property_id_here
+GOOGLE_ANALYTICS_MEASUREMENT_ID=your_google_analytics_measurement_id_here
+
 # Development Settings
 DEBUG=true
 TESTING=false
