--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cd backend && npm start",
     "build": "npm run build:backend && npm run build:frontend && npm run copy:frontend",
-    "build:frontend": "cd frontend && npm install --include=dev && npm run build",
+    "build:frontend": "cd frontend && npm install --include=dev && VITE_API_BASE_URL=/api npm run build",
     "build:backend": "cd backend && npm ci && npm run build",
     "copy:frontend": "rm -rf backend/dist/public && mkdir -p backend/dist/public && cp -r frontend/dist/* backend/dist/public/",
     "dev": "cd backend && npm run dev",
