fix: Update stripeService to prioritize environment variables and handle missing encrypted_credentials table

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "typescript"
   ],
   "author": "WeTechForU",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pg": "^8.16.3",
+    "stripe": "^19.1.0"
+  }
 }
