feat: Enhanced address parsing with Google Places address_components
- Added address_components to GooglePlace interface
- Created extractDetailedAddress() method for accurate parsing
- Updated all scraping flows to use detailed address components
- Now extracts: street number, route, city, state, zip separately
- Fallback to formatted_address if components unavailable
- Provides full structured address for exact search results

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "WeTechForU",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "pg": "^8.16.3",
     "stripe": "^19.1.0"
   }
