--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googleapis": "^162.0.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
     "nodemailer": "^6.9.7",
