--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
+    "puppeteer": "^24.25.0",
     "stripe": "^19.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
