--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
     "@azure/identity": "^4.12.0",
+    "@google-analytics/data": "^5.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
@@ -31,6 +32,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "geolib": "^3.3.4",
     "googleapis": "^162.0.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
