--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.8.0",
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
+    "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.2",
