--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@azure/identity": "^4.12.0",
     "@google-analytics/data": "^5.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@types/archiver": "^6.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
