--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,15 @@
     "@azure/identity": "^4.12.0",
     "@google-analytics/data": "^5.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
-    "@types/archiver": "^6.0.3",
+    "@types/archiver": "^6.0.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/form-data": "^2.2.1",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.8.0",
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
@@ -34,10 +36,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "form-data": "^4.0.4",
     "geolib": "^3.3.4",
     "googleapis": "^162.0.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "puppeteer": "^24.25.0",
