--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@azure/communication-email": "^1.0.0",
     "@azure/identity": "^4.12.0",
     "@google-analytics/data": "^5.2.1",
+    "@google/generative-ai": "^0.21.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@types/archiver": "^6.0.4",
     "@types/bcryptjs": "^2.4.6",
