feat: Implement Swagger API documentation with interactive UI
- Installed swagger-ui-express and swagger-jsdoc packages
- Created swagger.ts configuration with API schemas and tags
- Added Swagger UI at /api-docs endpoint
- Added Swagger JSON at /api-docs.json endpoint
- Documented Facebook API endpoints (overview, posts, sync)
- Configured authentication with cookie-based session
- Added support for both local and production servers
- Interactive API testing interface with Try It Out feature

--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,8 @@
     "pg": "^8.11.3",
     "puppeteer": "^24.25.0",
     "stripe": "^19.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
