fix: Show intro form immediately after welcome, fix form display detection
- Remove wait-for-first-input logic - show form immediately after welcome message
- Add form existence check before blocking messages
- Re-create form if missing but should be displayed
- Fix infinite loop when form is not visible

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "build": "tsc",
     "postinstall": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:inactivity": "node run-inactivity-migration.js"
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
