--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate:inactivity": "node run-inactivity-migration.js"
+    "migrate:inactivity": "node run-inactivity-migration.js",
+    "migrate:twilio-price": "node run-twilio-price-migration.js"
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
