--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
